--- a/style.css
+++ b/style.css
@@ -43,6 +43,15 @@ body{
     color: rgb(166, 166, 166);
 }
 
+@media only screen and (max-width: 600px) {
+  .itemname {
+    font-size: 2.2vw;
+  }
+  .itemartists {
+    font-size: 2vw;
+  }
+}
+
 .card{
     position: absolute;
     color: black;
